--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # full override: we're not tracking changes to the docsy base file.
 
-baseURL = "https://bytedance.github.io/byteir"
+baseURL = "https://bytedance.github.io/byteirWeb"
 relativeURLS = true
 canonifyurls = true
 
