--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,8 @@
 baseURL = "https://bytedance.github.io/byteirWeb"
 relativeURLS = true
 canonifyurls = true
-
 title = "ByteIR"
-googleAnalytics = "G-QYWRQRLPRM"
+
 
 enableRobotsTXT = true
 
@@ -18,7 +17,24 @@ defaultContentLanguageInSubdir = false
 # Useful when translating.
 enableMissingTranslationPlaceholders = true
 
-disableKinds = ["taxonomy", "taxonomyTerm"]
+# Comment out to enable taxonomies in Docsy
+# disableKinds = ["taxonomy", "taxonomyTerm"]
+
+# You can add your own taxonomies
+[taxonomies]
+tag = "tags"
+category = "categories"
+
+[params.taxonomy]
+# set taxonomyCloud = [] to hide taxonomy clouds
+taxonomyCloud = ["tags", "categories"]
+
+# If used, must have same length as taxonomyCloud
+taxonomyCloudTitle = ["Tag Cloud", "Categories"]
+
+# set taxonomyPageHeader = [] to hide taxonomies on the page headers
+taxonomyPageHeader = ["tags", "categories"]
+
 
 # Highlighting config
 pygmentsCodeFences = true
@@ -46,6 +62,12 @@ resampleFilter = "CatmullRom"
 quality = 75
 anchor = "smart"
 
+[services]
+[services.googleAnalytics]
+# Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
+id = "UA-00000000-0"
+
+
 # Language configuration
 
 [languages]
@@ -66,6 +88,8 @@ weight = 1
 
 [markup]
   [markup.goldmark]
+    [markup.goldmark.parser.attribute]
+      block = true
     [markup.goldmark.renderer]
       unsafe = true
   [markup.highlight]
@@ -87,7 +111,7 @@ time_format_default = "January 2, 2006"
 rss_sections = ["blog"]
 copyright = "The ByteIR Authors"
 project_name = "ByteIR"
-project_email = "liwen.chang@bytedance.com"
+project_email = "byteir@bytedance.com"
 
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
@@ -116,17 +140,17 @@ github_project_repo = "https://github.com/bytedance/byteir"
 github_org = "https://github.com/bytedance"
 
 # Specify a value here if your content directory is not in your repo's root directory
-github_subdir = "byteir"
+# github_subdir = "byteir"
 
 # Uncomment this if you have a newer GitHub repo with "main" as the default branch,
 # or specify a new value if you want to reference another branch in your GitHub links
 github_branch= "main"
 
-# github web branch
-github_web_branch = "web"
+# Google Custom Search Engine ID. Remove or comment out to disable search.
+gcs_engine_id = "d72aa9b2712488cc3"
 
 # Enable Algolia DocSearch
-algolia_docsearch = true
+algolia_docsearch = false
 
 # Enable Lunr.js offline search
 offlineSearch = false
@@ -136,16 +160,18 @@ prism_syntax_highlighting = true
 
 # User interface configuration
 [params.ui]
+navbar_translucent_over_cover_disable = false
 # Enable to show the side bar menu in its compact state.
 sidebar_menu_compact = false
 # Show expand/collapse icon for sidebar sections.
 sidebar_menu_foldable = true
 #  Set to true to disable breadcrumb navigation.
 breadcrumb_disable = false
+
 #  Set to true to hide the sidebar search box (the top nav search box will still be displayed if search is enabled)
-sidebar_search_disable = true
+sidebar_search_disable = false
 #  Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top nav bar
-navbar_logo = "/img/logo1.png"
+navbar_logo = true
 # Set to true to disable the About link in the site footer
 footer_about_disable = true
 
@@ -164,6 +190,7 @@ no = 'Sorry to hear that. Please <a href="https://github.com/bytedance/byteir/is
 # add "hide_readingtime: true" to the page's front matter
 [params.ui.readingtime]
 enable = false
+
 
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
@@ -186,17 +213,17 @@ url = "/about/"
 name = "License"
 url = "https://github.com/bytedance/byteir/blob/main/LICENSE"
 
-# [[params.links.user]]
-# 	name = "Lark"
-# 	url = "https://applink.feishu.cn/client/chat/chatter/add_by_link?link_token=693v2544-2664-4421-b50f-7f1912p745r6"
-# 	icon = "fab fa-lark"
-# 	desc = "Chat with other Project_Name users by lark"
-# 
-# [[params.links.user]]
-# 	name = "Twitter"
-# 	url = "https://twitter.com/Project_Name"
-# 	icon = "fab fa-twitter"
-# 	desc = "Follow us on Twitter to get the latest news!"
+[[params.links.user]]
+	name = "Lark"
+	url = "https://applink.feishu.cn/client/chat/chatter/add_by_link?link_token=82cg12a5-f6ef-4515-bb08-273b4ded00bp"
+	icon = "fab fa-lark"
+	desc = "Chat with other Project_Name users by lark"
+
+[[params.links.user]]
+	name = "X"
+	url = "https://twitter.com/byte_ir"
+	icon = "fab fa-twitter"
+	desc = "Follow us on Twitter to get the latest news!"
 
 [[params.links.developer]]
 	name = "GitHub"
