--- a/data/overview.toml
+++ b/data/overview.toml
@@ -1,11 +1,11 @@
 
-project_short_desc = "字节跳动的模型编译解决方案"
+project_short_desc = "字节跳动的端到端模型编译解决方案"
 
-project_short_desc_en = "ByteDance model compilation solution"
+project_short_desc_en = "ByteDance's end-to-end model compilation solution"
 
-why_choose_this = "ByteIR包括前端、编译器和运行时，并提供端到端的模型编译解决方案。"
+why_choose_this = "ByteIR提供端到端的模型编译解决方案，包括前端、编译器和运行时。并且保证了高性能的运行从而达到好的用户体验。"
 
-why_choose_this_en = "ByteIR includes frontends, compiler, and runtime, and provides an end-to-end model compilation solution."
+why_choose_this_en = "ByteIR is an end-to-end model compilation solution, including frontends, compiler, and runtime, and provides a high-performance execution and a great user experience."
 
 # 项目优势和特点（中文）
 [[features]]
