--- a/config.toml
+++ b/config.toml
@@ -135,6 +135,7 @@ url_latest_version = "https://example.com"
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/bytedance/byteir"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
+github_web_repo = "https://github.com/bytedance/byteirWeb"
 github_project_repo = "https://github.com/bytedance/byteir"
 
 github_org = "https://github.com/bytedance"
