--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ baseURL = "https://bytedance.github.io/byteirWeb"
 relativeURLS = true
 canonifyurls = true
 title = "ByteIR"
-googleAnalytics = "G-JYGZ9LXLYR"
+googleAnalytics = "G-39FL0PNWVL"
 
 enableRobotsTXT = true
 
@@ -65,7 +65,7 @@ anchor = "smart"
 [services]
 [services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-id = "UA-41389481-9"
+id = "UA-41389351-6"
 
 
 # Language configuration
