--- a/config.toml
+++ b/config.toml
@@ -72,13 +72,13 @@ description = "A leading practice for building enterprise cloud native middlewar
 languageName ="English"
 # Weight used for sorting.
 weight = 1
-# [languages.zh]
-# contentDir = "content/zh"
-# title = "ByteIR"
-# description = "A leading practice for building enterprise cloud native middleware!"
-# languageName ="中文"
-# # Weight used for sorting.
-# weight = 1
+[languages.zh]
+contentDir = "content/zh"
+title = "ByteIR"
+description = "A leading practice for building enterprise cloud native middleware!"
+languageName ="中文"
+# Weight used for sorting.
+weight = 1
 
 [markup]
   [markup.goldmark]
